Bug 1220337 - Don't show alternate notification actions on OS X 10.8. r=MattN a=ritu

--HG--
extra : commitid : J8lerZRKWLU
extra : source : 6d77cb7457881637d99755e8343b86e64ea64871
extra : amend_source : 0a3ef4e064f5a535c51400500cb4dbf8c9ee5b0b